[package]
name = "challenge-bypass-ristretto-cxx"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "cdylib",
    "staticlib",
]
name = "challenge_bypass_ristretto"

[dependencies]
cxx = "1.0"
challenge-bypass-ristretto = { path = "../challenge-bypass-ristretto", features = ["base64"] }
rand = "0.7.0"
sha2 = "0.8"
hmac = "0.7"
derive_more = "0.99.11"
lazy_static = "1.4.0"
ref-cast = "1.0"
